@@ -1,4 +1,5 @@
 Development
+    Make cursor hiding work in GTK3
     Select Subtitle by ID rather than by description + name
     Fix Issue #514
     Remove "percent" from idledata
